added link to nvd version

--- a/research/index.html
+++ b/research/index.html
@@ -8,6 +8,7 @@
         </style>
     </head>
     <body>
+<a href="../nvdcve/index.html">NVD Version</a>
 
 <h3>2. ImageMagick/ImageMagick (8)</h3>
 <div>{20200607: ['0e2fe461831a7877459dcae3debe24082a6c9446', 'dc134b48e86b0df5b755aa1f0bb7d217cbf176a1'], 20200609: ['196f03c5e35bd27bd4a04c9a2ed782538ebc0a28'], 20201121: ['eeaef151ae47e3f888d8d8c40ea0e8a8b96671d8'], 20220403: ['6708d4f2f577dcc835779df5c6f28732ccba44e0'], 20220427: ['6bcfc4813644ce1450b7ebc9b7cedbd0ff172d71'], 20230205: ['431944147432e6facbfe20eff4074780172a5ab8'], 20230211: ['a8668be21f6976f9306462cf84f17f0351b71f53']}</div>
