updated research index page

--- a/research/index.html
+++ b/research/index.html
@@ -12,6 +12,8 @@
         </style>
     </head>
     <body>
+<a href="./charts/1/index.html">Number of CVEs Before Updates / SECURITY.md Update Dates</a>
+<a href="./charts/2/index.html">Number of Commits / SECURITY.md Update Dates (Number of Updates)</a>
 <a href="../nvdcve/index.html">NVD Version</a>
 <a href="../cvss/v2/impact/index.html">CVSS v2 Impact</a>
 <a href="../cvss/v2/exploitability/index.html">CVSS v2 Exploitability</a>
