--- a/research/index.html
+++ b/research/index.html
@@ -13,6 +13,7 @@
     </head>
     <body>
 <a href="https://github.com/wanlok/unimelb-research-project">Project Repository</a>
+<a href="../content/index.html">Repository List</a>
 <a href="./charts/1/index.html">Number of CVEs Before Updates / SECURITY.md Update Dates</a>
 <a href="./charts/2/index.html">Number of Commits / SECURITY.md Update Dates (Number of Updates)</a>
 <a href="../nvdcve/index.html">NVD Version</a>
