--- a/research/github-security-policy/index.html
+++ b/research/github-security-policy/index.html
@@ -16,14 +16,51 @@
         }
     </style>
     <script>
+function helloworld(path) {
+fetch(path)
+.then(response => {
+if (!response.ok) {
+throw new Error('Network response was not ok');
+}
+return response.text();
+})
+.then(csvData => {
+const data = parseCSV(csvData);
+// Do something with the parsed data, e.g., display it in the console
+console.log(data);
+})
+.catch(error => {
+console.error('There was a problem fetching the CSV file:', error);
+});
+}
 
+
+function parseCSV(csv) {
+const lines = csv.split('\n');
+const result = [];
+
+const headers = lines[0].split(',');
+
+for (let i = 1; i < lines.length; i++) {
+const obj = {};
+const currentLine = lines[i].split(',');
+
+for (let j = 0; j < headers.length; j++) {
+obj[headers[j]] = currentLine[j];
+}
+
+result.push(obj);
+}
+
+return result;
+}
     </script>
 </head>
 <body>
 <a class="mya" href="Attributes.csv">Attributes</a>
 <h3>Ungrouped</h3>
 <ul>
-    <li><a class="mya" href="./ungrouped/Spearman 1.csv">Spearman 1</a></li>
+    <li><a class="mya" onclick="helloworld('./ungrouped/Spearman 1.csv')" href="#">Spearman 1</a></li>
     <li><a class="mya" href="./ungrouped/Spearman 2.csv">Spearman 2</a></li>
     <li><a class="mya" href="./ungrouped/Mann.csv">Mann</a></li>
     <li><a class="mya" href="./ungrouped/Chi.csv">Chi</a></li>
