--- a/research/github-security-policy/index.html
+++ b/research/github-security-policy/index.html
@@ -72,7 +72,7 @@
     <div id="main">
         <div>
             <div>
-                <a href="#">Repositories</a>
+                <a onclick="get('Repositories', 'Repositories.csv')" href="#repositories">Repositories</a>
                 <h2>Research Question 2</h2>
                 <a onclick="get('Spearman Test (Level 1)', 'Spearman 1.csv')" href="#spearman-level-1-test">Spearman Test (Level 1)</a>
                 <a onclick="get('Spearman Test (Level 2)', 'Spearman 2.csv')" href="#spearman-level-2-test">Spearman Test (Level 2)</a>
