--- a/research/github-security-policy/index.html
+++ b/research/github-security-policy/index.html
@@ -32,6 +32,7 @@
 
         table {
             border-collapse: collapse;
+            white-space: nowrap;
         }
 
         tr:nth-child(1) {
