--- a/tasty/contact.html
+++ b/tasty/contact.html
@@ -121,7 +121,10 @@
 			</div>
 			
 			<div class="row">
-				<div class="col-md-6 col-md-push-6 col-sm-6 col-sm-push-6">
+				<div class="col-md-6">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d517.8727611543777!2d114.1750414499971!3d22.316695151811192!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x340401603108a59f%3A0x94e37b7f94cd26f1!2z5L2V5paH55Sw6KGXRnVzaW9u5bCN6Z2i!5e0!3m2!1szh-TW!2sau!4v1708328729412!5m2!1szh-TW!2sau" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
+				<div class="col-md-6">
 					<form action="#" id="form-wrap">
 						<div class="row form-group">
 							<div class="col-md-12">
