--- a/site/Home.html
+++ b/site/Home.html
@@ -65,8 +65,15 @@
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-sheet-1">
         <div class="u-align-left u-container-align-left u-container-style u-group u-white u-group-1">
           <div class="u-container-layout u-valign-middle u-container-layout-1">
-            <h3 class="u-align-left u-text u-text-1"> Architecture &amp;Town Planning</h3>
-            <p class="u-align-left u-text u-text-2">Sample text. Click to select the text box. Click again or double click to start editing the text.&nbsp;Condim entum mattis pellentesque id nibh tortor id aliquet.</p>
+            <h3 class="u-align-left u-text u-text-1">簡介</h3>
+            <p class="u-align-left u-text u-text-2">
+群聲鋼閘公司擁有二十多年豐富經驗，信譽超卓。
+親自上門度尺，設計及專業技師安裝服務。
+自設工廠，為客人以最優惠的價格，提供高質素服務。</p>
+            <p class="u-align-left u-text u-text-2">
+本司承接各大小工程，包括：
+鋼閘、鋁窗、窗花、欄河、鋁趟門、摺門、浴屏、驗窗維修及裝修工程等。
+            </p>
             <p class="u-align-left u-text u-text-grey-50 u-text-3">Image from <a href="https://www.freepik.com" class="u-active-none u-border-1 u-border-active-palette-1-base u-border-black u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-50 u-btn-1">Freepik</a>
             </p>
             <a href="https://nicepage.review" class="u-active-black u-align-left u-border-none u-btn u-btn-round u-button-style u-hover-black u-palette-1-base u-radius-50 u-text-active-white u-text-hover-white u-btn-2">Contact Us</a>
