--- a/site/index.html
+++ b/site/index.html
@@ -76,7 +76,7 @@
             </p>
             <p class="u-align-left u-text u-text-grey-50 u-text-3">Image from <a href="https://www.freepik.com" class="u-active-none u-border-1 u-border-active-palette-1-base u-border-black u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-50 u-btn-1">Freepik</a>
             </p>
-            <a href="https://nicepage.review" class="u-active-black u-align-left u-border-none u-btn u-btn-round u-button-style u-hover-black u-palette-1-base u-radius-50 u-text-active-white u-text-hover-white u-btn-2">Contact Us</a>
+            <a href="https://wa.me/85264352040" class="u-active-black u-align-left u-border-none u-btn u-btn-round u-button-style u-hover-black u-palette-1-base u-radius-50 u-text-active-white u-text-hover-white u-btn-2">Contact Us</a>
           </div>
         </div>
       </div>
