--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Testing</title>
-        <link rel="icon" type="image/x-icon" href="/me.ico">
+        <link rel="icon" type="image/x-icon" href="me.ico">
     </head>
     <body>
         <img src="me.jpeg" style="width: 100%; height: 100%; object-fit: contain;" />
